--- a/src/styles/lx-shell-grid.css
+++ b/src/styles/lx-shell-grid.css
@@ -1729,7 +1729,18 @@
 }
 
 .lx-data-grid-wrapper .lx-empty-state-wrapper {
-  margin: 1rem;
+  margin: 0 var(--grid-right-margin, 0) 0 var(--grid-left-margin, 0);
+  background-color: var(--color-region);
+  border: none;
+  position: relative;
+  padding: 2rem;
+}
+
+.lx-data-grid-wrapper .lx-empty-state-wrapper::before {
+  content: '';
+  position: absolute;
+  inset: 1rem;
+  border: var(--border-width-2) solid var(--color-chrome);
 }
 
 .lx-empty-state-data {
